--- a/css/index.css
+++ b/css/index.css
@@ -68,40 +68,32 @@
 	display: inline-flex;
 	align-items: center;
 	justify-content: center;
+	color: var(--default-txt-color);
 }
-.card__body__link span {
-	font-size: 19px;
+.card__body__link i {
 	display: inline-flex;
 	align-items: center;
-	justify-content: center;
+	font-size: 18px;
 	margin-left: 4px;
 }
 
 @media screen and (max-width: 600px) {
 	.main {
-		padding-top: 2em;
+		padding: 2em 0;
 	}
+
 	.card {
-		margin-bottom: 2em;
-		border-radius: 0;
-		position: relative;
-	}
-	.card::before {
-		content: '';
-		height: 0px;
-		width: 100%;
-
-		background-color: #a0a0a0;
-		border-bottom: 3px dashed #fff;
-
-		position: absolute;
-		top: -1em;
-		
-		z-index: 100;
+		padding-top: 1em;
 	}
 
 	.card__slider {
+		width: calc(100% + 15px);
+		transform: translateX(-7.5px);
+		box-shadow: 0px 2px 8px #0000002d;
 		border-top-right-radius: 0;
 		border-top-left-radius: 0;
+	}
+	.card__body {
+		padding: 1px .6em 1em .6em;
 	}
 }
