--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,12 @@
 :root {
-	--body-bg-color: #f3f3f3;
+	--body-bg-color: #fff;
 
 	--default-bg-color: #000;
 	--default-box-shdw: 0px 1px 12px #00000054;
-	--default-txt-color: #eee;
+	--default-txt-color: #f5f5f5;
+
+	--card-bg-color: #fff;
+	--card-txt-color: #222;
 }
 
 *:after,
@@ -11,42 +14,37 @@
 * {
 	font-family: 'DM Sans', sans-serif;
 	box-sizing: border-box;
-	color: var(--default-txt-color);
 }
 
 .link {
-	color: #8ca5d1;
+	color: #639cff;
 	text-decoration: none;
 }
 .link:hover {
 	text-decoration: underline;
 }
+.link.white {
+	color: var(--default-txt-color);
+}
 
 .cont-limite {
-	width: calc(100vw - 30px);
+	width: calc(100% - 15px);
 	max-width: 700px;
 	margin: auto;
 }
 
-@media screen and (max-width: 600px) {
-	.cont-limite {
-		width: 100%;
-		max-width: 700px;
-		margin: auto;
-	}
-	header .cont-limite {
-		width: calc(100vw - 30px);
-	}
-}
 
 body {
 	background-color: var(--body-bg-color);
+	color: var(--default-txt-color);
 }
 
 header {
 	height: auto;
 	width: 100%;
-	padding: 20px 0;
+	padding: 25px 0;
+
+	position: relative;
 
 	background-color: var(--default-bg-color);
 	box-shadow: var(--default-box-shdw);
@@ -56,11 +54,35 @@ header .cont-limite {
 	justify-content: space-between;
 	align-items: start;
 	flex-wrap: wrap;
+
+	position: relative;
+	z-index: 100;
+}
+
+.header__video {
+	height: 100%;
+	width: 100%;
+	object-fit: cover;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 50;
+}
+.header__cont-bg-color {
+	position: absolute;
+	top: 0;
+	left: 0;
+
+	height: 100%;
+	width: 100%;
+	background-color: #000000dc;
+
+	z-index: 100;
 }
 
 .header__img-perfil {
 	border-radius: 50%;
-	border: 3px solid #ff3a3a;
+	border: 3px solid #639cff;
 }
 .header__cont-info {
 	margin: 0 10px;
@@ -90,7 +112,7 @@ header .cont-limite {
 		justify-content: space-around;
 	}
 }
-@media screen and (max-width: 697px) {
+@media screen and (max-width: 405px) {
 	.header__nombre {
 		text-align: center;
 	}
@@ -113,6 +135,7 @@ header .cont-limite {
 header ul {
 	padding: 0;
 	list-style-type: none;
+	margin: 0;
 }
 header ul li {
 	display: flex;
@@ -120,18 +143,23 @@ header ul li {
 	padding: 4px 0;
 }
 header ul li a {
-	margin-left: 5px;
 	font-size: 16px;
 }
-header ul li .material-symbols-outlined {
+header ul li i {
+	margin-right: 7px;
+	display: inline-flex;
+	align-items: center;
 	font-size: 18px; 
+}
+header h3 {
+	margin-bottom: 8px;
 }
 
 
 .footer {
 	height: 75px;
 	background-color: var(--default-bg-color);
-	padding-top: 1em;
+	padding: 1em 1em 0 1em;
 	text-align: right;
 
 	font-size: 1.1em;
