--- a/css/main.css
+++ b/css/main.css
@@ -12,12 +12,11 @@
 *:after,
 *:before,
 * {
-	font-family: 'DM Sans', sans-serif;
 	box-sizing: border-box;
 }
 
 .link {
-	color: #639cff;
+	color: #88b4ff;
 	text-decoration: none;
 }
 .link:hover {
@@ -37,6 +36,7 @@
 body {
 	background-color: var(--body-bg-color);
 	color: var(--default-txt-color);
+	font-family: 'DM Sans', sans-serif;
 }
 
 header {
@@ -75,14 +75,30 @@ header .cont-limite {
 
 	height: 100%;
 	width: 100%;
-	background-color: #000000dc;
 
 	z-index: 100;
+
+	animation-name: bg-transition;
+	animation-duration: 4s;
+	animation-fill-mode: both;
+	animation-iteration-count: infinite;
+	animation-timing-function: ease-in-out;
+	animation-direction: alternate;
+}
+
+@keyframes bg-transition {
+	0% {
+		background-color: rgba(0, 0, 0, .60);
+	}
+	100% {
+		background-color: rgba(6, 13, 48, 0.60);
+	}
 }
 
 .header__img-perfil {
 	border-radius: 50%;
-	border: 3px solid #639cff;
+	border: 3px solid #eee;
+	box-shadow: var(--default-box-shdw);
 }
 .header__cont-info {
 	margin: 0 10px;
