--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -1,47 +1,66 @@
 ---
-import AtSign from "./icons/AtSign.astro";
 import Book from "./icons/Book.astro";
 import Brain from "./icons/Brain.astro";
 import Code from "./icons/Code.astro";
 import Email from "./icons/Email.astro";
+import Work from "./icons/Work.astro";
 import User from "./icons/User.astro";
-import Diagonal from "./shared/Diagonal.astro";
+import Check from "./icons/Check.astro";
 import Section from "./shared/Section.astro";
 import imgHashiRamen from "../assets/img/screenshot-hr.png";
+import imgLocOsLinux from "../assets/img/screenshot-lpl.png";
 import imgCloneSpotify from "../assets/img/screenshot-sp.png";
 import AstroIcon from "./icons/AstroIcon.astro";
 import React from "./icons/React.astro";
 import Tailwind from "./icons/Tailwind.astro";
+import Html from "./icons/Html.astro";
+import Css from "./icons/Css.astro";
+import Js from "./icons/Js.astro";
+import JsLogo from "./logos/Js.astro";
 import Link from "./icons/Link.astro";
+import AstroLogo from "./logos/AstroLogo.astro";
+import Java from "./logos/Java.astro";
+import MySql from "./logos/MySql.astro";
+import Php from "./logos/Php.astro";
+import ReactLogo from "./logos/React.astro";
+import TailwindLogo from "./logos/Tailwind.astro";
+import Csharp from "./logos/Csharp.astro";
+import Cpp from "./logos/Cpp.astro";
+import SkillItem from "./shared/SkillItem.astro";
+import SkillContainer from "./shared/SkillContainer.astro";
+import Linux from "./logos/Linux.astro";
 ---
 
 <main class="h-full overflow-hidden">
   <div
+    id="main"
     class="h-full overflow-x-hidden overflow-y-auto flex flex-col items-center"
   >
-    <section class="px-5 py-3 w-auto min-h-full flex items-center">
+    <section class="px-5 py-20 mb-20 md:mb-20 md:py-10 w-auto min-h-full h-auto flex items-center">
       <div>
-        <h2 class="text-7xl text-neutral-100 font-medium mb-2">
-          <span class="text-green-200">A</span>drian <span
-            class="text-green-200">T</span
-          >afoya <span class="text-green-200">M</span>.
+        <h2 class="text-5xl md:text-7xl text-neutral-100 font-medium mb-2">
+          <span class="text-orange-100">A</span>drian <span
+            class="text-orange-100">T</span
+          >afoya <span class="text-orange-100">M</span>.
         </h2>
         <div class="py-2 max-w-[700px]">
-          <p class="flex items-center gap-2 text-lg">
+          <p class="gap-2 text-lg">
             Desarrollador de Software. Desde 2020, he combinado estudios
-            formales y aprendizaje autodidacta, especializándome en front-end
-            con una proyección hacia full-stack. Me apasiona crear interfaces
-            modernas y desarrollar soluciones prácticas que marquen la
-            diferencia.
+            formales y aprendizaje autodidacta, especializándome en <i
+              >front-end</i
+            >
+            con una proyección hacia <i>full-stack</i>. Me apasiona crear
+            interfaces modernas y desarrollar soluciones prácticas que marquen
+            la diferencia.
           </p>
         </div>
         <div class="mt-4">
           <a
-            href="#"
-            class="h-7 inline-flex items-center hover:translate-x-2 bg-teal-100 text-slate-950 pr-4"
+            href="mailto:atafoya863@gmail.com"
+            class="border-2 border-orange-300 rounded text-orange-300 font-medium py-1 px-4 hover:bg-orange-300 hover:text-slate-950 inline-flex items-center gap-2"
           >
-            <Diagonal className="bg-teal-300"><Email /></Diagonal>
-            <span class="pl-4 font-medium">Contáctame</span>
+            <Email className="size-5" />
+            Contáctame
           </a>
         </div>
       </div>
@@ -49,59 +68,134 @@ import Link from "./icons/Link.astro";
     <Section id="proyectos" title="Proyectos">
       <Code className="size-8" slot="icon" />
       <div>
-        <article class="flex gap-8 mb-20">
+        <article class="flex flex-col md:flex-row-reverse gap-8 items-start">
           <img
-            class="w-1/2 h-auto border border-neutral-600"
+            class="w-full md:w-1/2 h-auto border-2 border-neutral-600 rounded-lg"
             src={imgCloneSpotify.src}
-            alt="Imagen del sitio web del restaurante hashi ramen pho"
+            alt="Imagen de la app web del clon de spotify"
+            loading="lazy"
           />
           <div>
             <h3 class="text-3xl font-medium mb-4 text-green-300">
-              Spotify clone - Web App
+              Spotify clon - Web App
             </h3>
             <div class="flex gap-4 mb-4">
               <span><React className="size-6" /></span>
             </div>
             <p class="mb-6">
-              Clon Front-end de Spotify, puse en practica mis conocimientos de React con ReactRouter y ContextApi.
+              Clon Front-end de Spotify, puse en practica mis conocimientos de
+              React con ReactRouter y ContextApi.
             </p>
             <div>
               <a
-                href="#"
-                class="h-7 inline-flex items-center hover:translate-x-2 bg-lime-200 text-slate-950 pr-4"
+                href="https://spotifymx.vercel.app/"
+                target="_blank" rel="noopener noreferrer"
+                class="border-2 border-green-400 rounded text-green-400 font-medium py-1 px-4 hover:bg-green-400 hover:text-slate-950 inline-flex items-center gap-2"
               >
-                <Diagonal className="bg-lime-400"><Link /></Diagonal>
-                <span class="pl-4 font-medium">Preview</span>
+                <Link className="size-5" />
+                Preview
               </a>
             </div>
           </div>
         </article>
-        <article class="flex gap-8 flex-row-reverse">
+      </div>
+    </Section>
+    <Section id="experiencia" title="Experiencia">
+      <Work className="size-8" slot="icon" />
+      <div>
+        <article class="flex flex-col md:flex-row-reverse gap-8 items-start mb-16">
           <img
-            class="w-1/2 h-auto border border-neutral-600"
+            class="w-full md:w-1/2 h-auto border-2 border-neutral-600 rounded-lg"
             src={imgHashiRamen.src}
             alt="Imagen del sitio web del restaurante hashi ramen pho"
           />
           <div>
-            <h3 class="text-3xl font-medium mb-4 text-pink-300">
-              Hashi ramen pho - Website
+            <h3 class="text-3xl font-medium mb-1 text-blue-300">
+              Hashi Ramen & Pho - Sitio Web
             </h3>
+            <h4 class="text-xl mb-4 text-neutral-200">2024</h4>
             <div class="flex gap-4 mb-4">
               <span><AstroIcon className="size-6" /> </span>
               <span><React className="size-6" /></span>
               <span><Tailwind className="size-6" /></span>
             </div>
             <p class="mb-6">
-              Sitio web de un restaurante local que sirve comida asiatica, cuenta con pagina de inicio y menu la cual viene de un JSON en el que capturé todo el menú.
-              Creado con Astro, React y Tailwind CSS.
+              Sitio web de un restaurante local que sirve comida asiática,
+              cuenta con página de inicio y menú la cual viene de un JSON en el
+              que capturé todo el menú.
             </p>
+            <ul class="mb-6 space-y-2">
+              <li class="flex items-start gap-2">
+                <Check className="text-green-400 h-4 w-5 min-w-5 min-h-5" />
+                <span
+                  >Implementación de colores contrastantes para un tema oscuro
+                  moderno.</span
+                >
+              </li>
+              <li class="flex items-start gap-2">
+                <Check className="text-green-400 h-4 w-5 min-w-5 min-h-5" />
+                <span>Optimización para dispositivos móviles.</span>
+              </li>
+            </ul>
             <div>
               <a
-                href="#"
-                class="h-7 inline-flex items-center hover:translate-x-2 bg-red-200 text-slate-950 pr-4"
+                href="https://hashiramen.vercel.app/"
+                target="_blank" rel="noopener noreferrer"
+                class="border-2 border-blue-400 rounded text-blue-400 font-medium py-1 px-4 hover:bg-blue-400 hover:text-slate-950 inline-flex items-center gap-2"
               >
-                <Diagonal className="bg-red-400"><Link /></Diagonal>
-                <span class="pl-4 font-medium">Preview</span>
+                <Link className="size-5" />
+                Preview
+              </a>
+            </div>
+          </div>
+        </article>
+
+        <article class="flex flex-col md:flex-row gap-8 items-start">
+          <img
+            class="w-full md:w-1/2 h-auto border-2 border-neutral-600 rounded-lg"
+            src={imgLocOsLinux.src}
+            alt="Vista previa del diseño de la página de Loc-OS Linux"
+            loading="lazy"
+          />
+
+          <div>
+            <h3 class="text-3xl font-medium mb-1 text-blue-300">
+              Loc-OS Linux - Diseño Web
+            </h3>
+            <h4 class="text-xl mb-4 text-neutral-200">2021</h4>
+            <div class="flex gap-4 mb-4">
+              <span><Html className="size-5" /> </span>
+              <span><Css className="size-5" /></span>
+              <span><Js className="size-5" /></span>
+            </div>
+            <p class="mb-6">
+              Colaboré con el canal de <strong>YouTube</strong> "Locos por Linux"
+              para mejorar el diseño de su página web de su distribución de Linux
+              llamada "Loc-OS Linux", aplicando un tema oscuro con tonos amarillos,
+              asegurando consistencia y una experiencia de usuario más atractiva.
+              El diseño estuvo en uso durante 2021.
+            </p>
+            <ul class="mb-6 space-y-2">
+              <li class="flex items-start gap-2">
+                <Check className="text-green-400 h-4 w-5 min-w-5 min-h-5" />
+                <span
+                  >Implementación de colores contrastantes para un tema oscuro
+                  moderno.</span
+                >
+              </li>
+              <li class="flex items-start gap-2">
+                <Check className="text-green-400 h-4 w-5 min-w-5 min-h-5" />
+                <span>Optimización para dispositivos móviles.</span>
+              </li>
+            </ul>
+            <div>
+              <a
+                href="https://adriantaf.github.io/loc-os-linux/"
+                target="_blank" rel="noopener noreferrer"
+                class="border-2 border-blue-400 rounded text-blue-400 font-medium py-1 px-4 hover:bg-blue-400 hover:text-slate-950 inline-flex items-center gap-2"
+              >
+                <Link className="size-5" />
+                Preview
               </a>
             </div>
           </div>
@@ -110,12 +204,144 @@ import Link from "./icons/Link.astro";
     </Section>
     <Section id="habilidades" title="Habilidades">
       <Brain className="size-8" slot="icon" />
+
+      <div>
+        <div class="mb-10">
+          <h3 class="text-xl text-neutral-300 font-semibold mb-4">Front-end</h3>
+          <div class="w-full flex flex-wrap gap-10">
+            <SkillContainer>
+              <SkillItem>
+                <JsLogo
+                  className="size-8 max-h-full max-w-full aspect-square"
+                />
+              </SkillItem>
+            </SkillContainer>
+
+            <SkillContainer>
+              <SkillItem>
+                <TailwindLogo
+                  className="size-8 max-h-full max-w-full aspect-square"
+                />
+              </SkillItem>
+            </SkillContainer>
+            <SkillContainer>
+              <SkillItem>
+                <ReactLogo
+                  className="size-8 max-h-full max-w-full aspect-square"
+                />
+              </SkillItem>
+            </SkillContainer>
+
+            <SkillContainer>
+              <SkillItem>
+                <AstroLogo
+                  className="size-8 max-h-full max-w-full aspect-square"
+                />
+              </SkillItem>
+            </SkillContainer>
+          </div>
+        </div>
+        <div class="mb-10">
+          <h3 class="text-xl text-neutral-300 font-semibold mb-4">Back-end</h3>
+          <div class="w-full flex flex-wrap gap-10">
+            <SkillContainer>
+              <SkillItem>
+                <MySql className="size-8 max-h-full max-w-full aspect-square" />
+              </SkillItem>
+            </SkillContainer>
+
+            <SkillContainer className="col-span-1">
+              <SkillItem>
+                <Php className="size-8 max-h-full max-w-full aspect-square" />
+              </SkillItem>
+              <p class="text-sm text-neutral-200 text-center">
+                POO & CRUD con MySQL
+              </p>
+            </SkillContainer>
+          </div>
+        </div>
+        <div>
+          <h3 class="text-xl text-neutral-300 font-semibold mb-4">Otros</h3>
+          <div class="w-full flex flex-wrap gap-10">
+            <SkillContainer className="max-w-[50%]">
+              <SkillItem>
+                <Cpp className="size-8 max-h-full max-w-full aspect-square" />
+              </SkillItem>
+              <p class="text-sm text-neutral-200 text-center">
+                Programación estructurada
+              </p>
+            </SkillContainer>
+
+            <SkillContainer className="max-w-[50%]">
+              <SkillItem>
+                <Csharp
+                  className="size-8 max-h-full max-w-full aspect-square"
+                />
+              </SkillItem>
+              <p class="text-sm text-neutral-200 text-center">Desktop</p>
+            </SkillContainer>
+
+            <SkillContainer className="max-w-[50%]">
+              <SkillItem>
+                <Java className="size-8 max-h-full max-w-full aspect-square" />
+              </SkillItem>
+              <p class="text-sm text-neutral-200 text-center">
+                POO, Desktop & CRUD con MySQL
+              </p>
+            </SkillContainer>
+
+            <SkillContainer className="max-w-[50%]">
+              <SkillItem>
+                <Linux className="size-8 max-h-full max-w-full aspect-square" />
+              </SkillItem>
+            </SkillContainer>
+          </div>
+        </div>
+      </div>
     </Section>
     <Section id="educacion" title="Educación">
       <Book className="size-8" slot="icon" />
+      <div class="space-y-8">
+        <div class="border-l-4 border-purple-500 pl-6">
+          <h3 class="text-2xl font-semibold mb-2">
+            Ingeniería en Sistemas Computacionales
+          </h3>
+          <p class="text-neutral-200 text-lg">
+            Instituto Tecnológico de Ensenada (ITE)
+          </p>
+          <p class="text-sm text-neutral-300">Agosto 2023 - En curso</p>
+        </div>
+        <div class="border-l-4 border-purple-500 pl-6">
+          <h3 class="text-2xl font-semibold mb-2">Técnico en Programación</h3>
+          <p class="text-neutral-200 text-lg">CBTIS 41</p>
+          <p class="text-sm text-neutral-300">Agosto 2019 - Julio 2023</p>
+        </div>
+      </div>
     </Section>
     <Section id="sobre-mi" title="Sobre mí">
       <User className="size-8" slot="icon" />
+      <div>
+        <p>
+          Desarrollador de Software. Desde 2020, he combinado estudios formales
+          y aprendizaje autodidacta, especializándome en desarrollo web con un
+          enfoque en <i>front-end</i> y una proyección hacia <i>full-stack</i>.
+          Me apasiona crear interfaces modernas y desarrollar soluciones
+          prácticas que marquen la diferencia, aprovechando mis fortalezas en
+          JavaScript, PHP y un sólido dominio de la Programación Orientada a
+          Objetos (POO) en Java.
+          <br />
+          <br />
+          Soy una persona creativa, ingeniosa y constante, cualidades que me motivan
+          a mantenerme actualizado. Aspiro a crecer profesionalmente como desarrollador
+          de software, aprendiendo inglés y alcanzando un nivel de excelencia en
+          esta rama.
+        </p>
+      </div>
     </Section>
+    <footer class="w-full flex justify-center">
+      <div class="container py-12 text-right">
+        Desarrollado con Astro.
+      </div>
+    </footer>
   </div>
 </main>
