--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,6 +33,8 @@ import './styles/Fonts.css';
 	if (video) {
 		video.playbackRate = 0.5;
 	}
+
+	document.body.focus();
 </script>
 
 <style is:global>
@@ -47,18 +49,18 @@ import './styles/Fonts.css';
 	.body-content {
 		overflow: hidden;
 		display: grid;
-		grid-template-columns: auto 1fr;
-		grid-template-rows: 1fr auto;
+		grid-template-columns: 1fr;
+		grid-template-rows: auto;
 		grid-template-areas:
-			"aside main"
-			"aside main"
-			"header header";
+			"main"
+			"main"
+			"header";
 		background: linear-gradient(
 			180deg,
-			rgba(17, 18, 29, 0.85) 0%,
-			rgba(2, 6, 23, 0.85) 80%
+			rgba(17, 18, 29, 0.95) 0%,
+			rgba(2, 6, 23, 0.95) 80%
 		);
-		backdrop-filter: blur(12px);
+		backdrop-filter: blur(8px);
 	}
 
 	*::-webkit-scrollbar {
