Arreglado el header

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,7 +22,7 @@ import './styles/Fonts.css';
 			class="h-screen z-10 object-cover w-dvw absolute top-0 left-0"
 			src={BgVideo}
 		></video>
-		<div class="body-content h-screen w-screen z-[100] absolute top-0 left-0">
+		<div class="body-content h-dvh w-dvw z-[100] absolute top-0 left-0">
 			<slot />
 		</div>
 	</body>
@@ -57,8 +57,8 @@ import './styles/Fonts.css';
 			"header";
 		background: linear-gradient(
 			180deg,
-			rgba(17, 18, 29, 0.95) 0%,
-			rgba(2, 6, 23, 0.95) 80%
+			rgba(17, 18, 29, 0.85) 0%,
+			rgba(2, 6, 23, 0.85) 80%
 		);
 		backdrop-filter: blur(8px);
 	}
