--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -1,6 +1,7 @@
 ---
 import Book from "./icons/Book.astro";
 import Brain from "./icons/Brain.astro";
+import Dev from "./icons/Dev.astro";
 import Code from "./icons/Code.astro";
 import Email from "./icons/Email.astro";
 import Work from "./icons/Work.astro";
@@ -8,6 +9,7 @@ import User from "./icons/User.astro";
 import Check from "./icons/Check.astro";
 import Section from "./shared/Section.astro";
 import imgHashiRamen from "../assets/img/screenshot-hr.png";
+import imgAlbert from "../assets/img/img-albert-einsten.png";
 import imgLocOsLinux from "../assets/img/screenshot-lpl.png";
 import imgCloneSpotify from "../assets/img/screenshot-sp.png";
 import AstroIcon from "./icons/AstroIcon.astro";
@@ -36,15 +38,17 @@ import Linux from "./logos/Linux.astro";
     id="main"
     class="h-full overflow-x-hidden overflow-y-auto flex flex-col items-center"
   >
-    <section class="px-5 py-20 mb-20 md:mb-20 md:py-10 w-auto min-h-full h-auto flex items-center">
-      <div>
+    <section id="init" class="h-auto">
+      <div
+        class="max-w-[100dvw] w-[700px] px-5 py-20 min-h-full-main h-auto flex flex-col justify-center"
+      >
         <h2 class="text-5xl md:text-7xl text-neutral-100 font-medium mb-2">
           <span class="text-orange-100">A</span>drian <span
             class="text-orange-100">T</span
           >afoya <span class="text-orange-100">M</span>.
         </h2>
-        <div class="py-2 max-w-[700px]">
-          <p class="gap-2 text-lg">
+        <div class="py-2">
+          <p class="gap-2 md:text-lg">
             Desarrollador de Software. Desde 2020, he combinado estudios
             formales y aprendizaje autodidacta, especializándome en <i
               >front-end</i
@@ -57,43 +61,67 @@ import Linux from "./logos/Linux.astro";
         <div class="mt-4">
           <a
             href="mailto:atafoya863@gmail.com"
-            class="border-2 border-orange-300 rounded text-orange-300 font-medium py-1 px-4 hover:bg-orange-300 hover:text-slate-950 inline-flex items-center gap-2"
+            class="border-2 border-orange-300 text-orange-300 font-medium py-1 px-4 transition-colors ease-in delay-150 hover:bg-orange-300 hover:text-slate-950 inline-flex items-center gap-2"
           >
             <Email className="size-5" />
             Contáctame
           </a>
         </div>
       </div>
+
+      <!-- Frase -->
+      <div class="h-auto py-10 pb-14 md:py-0 md:pb-20 px-5 max-w-[100dvw] w-[700px] flex flex-col items-center justify-center md:items-center md:flex-row-reverse gap-6">
+        <blockquote class="text-neutral-100 text-base md:text-lg">
+          <p class="italic">
+            <!-- "El desarrollo progresivo del hombre depende vitalmente de las
+            invenciones. Son el resultado más importante del cerebro creativo". -->
+            "La creatividad es inteligencia divirtiéndose."
+          </p>
+          <small class="block mt-4 text-base text-right text-neutral-200">- Albert Einstein.</small>
+        </blockquote>
+        <img src={imgAlbert.src} class="max-w-[100%] w-[300px] [mask-image:linear-gradient(#000_80%,transparent)]" alt="Imagen de Albert Einstein">
+      </div>
     </section>
+
     <Section id="proyectos" title="Proyectos">
       <Code className="size-8" slot="icon" />
       <div>
-        <article class="flex flex-col md:flex-row-reverse gap-8 items-start">
+        <article class="flex flex-col md:flex-row-reverse gap-3 md:gap-8 items-start">
           <img
-            class="w-full md:w-1/2 h-auto border-2 border-neutral-600 rounded-lg"
+            class="w-full md:w-1/2 h-auto border-2 border-neutral-600"
             src={imgCloneSpotify.src}
             alt="Imagen de la app web del clon de spotify"
             loading="lazy"
           />
           <div>
-            <h3 class="text-3xl font-medium mb-4 text-green-300">
+            <h3 class="text-2xl md:text-3xl font-medium mb-2 text-green-300">
               Spotify clon - Web App
             </h3>
+            <h4 class="text-sm mb-4 text-neutral-200">Diciembre 2024</h4>
             <div class="flex gap-4 mb-4">
               <span><React className="size-6" /></span>
             </div>
             <p class="mb-6">
               Clon Front-end de Spotify, puse en practica mis conocimientos de
-              React con ReactRouter y ContextApi.
+              React con React Router y Context Api.
             </p>
-            <div>
+            <div class="flex gap-2">
               <a
                 href="https://spotifymx.vercel.app/"
-                target="_blank" rel="noopener noreferrer"
-                class="border-2 border-green-400 rounded text-green-400 font-medium py-1 px-4 hover:bg-green-400 hover:text-slate-950 inline-flex items-center gap-2"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="border-2 border-green-400 text-green-400 font-medium py-1 px-4 hover:bg-green-400 transition-colors ease-in delay-150 hover:text-slate-950 inline-flex items-center gap-2"
               >
                 <Link className="size-5" />
                 Preview
+              </a>
+              <a
+                href="https://github.com/adriantaf/spotify"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="border-2 border-gray-300 text-gray-300 font-medium py-1 px-4 hover:bg-gray-300 transition-colors ease-in delay-150 hover:text-slate-950 inline-flex items-center gap-2"
+              >
+                Código
               </a>
             </div>
           </div>
@@ -103,17 +131,19 @@ import Linux from "./logos/Linux.astro";
     <Section id="experiencia" title="Experiencia">
       <Work className="size-8" slot="icon" />
       <div>
-        <article class="flex flex-col md:flex-row-reverse gap-8 items-start mb-16">
+        <article
+          class="flex flex-col md:flex-row-reverse gap-3 md:gap-8 items-start mb-16"
+        >
           <img
-            class="w-full md:w-1/2 h-auto border-2 border-neutral-600 rounded-lg"
+            class="w-full md:w-1/2 h-auto border-2 border-neutral-600"
             src={imgHashiRamen.src}
             alt="Imagen del sitio web del restaurante hashi ramen pho"
           />
           <div>
-            <h3 class="text-3xl font-medium mb-1 text-blue-300">
+            <h3 class="text-2xl md:text-3xl font-medium mb-2 text-blue-300">
               Hashi Ramen & Pho - Sitio Web
             </h3>
-            <h4 class="text-xl mb-4 text-neutral-200">2024</h4>
+            <h4 class="text-sm mb-4 text-neutral-200">Septiembre 2024</h4>
             <div class="flex gap-4 mb-4">
               <span><AstroIcon className="size-6" /> </span>
               <span><React className="size-6" /></span>
@@ -128,7 +158,7 @@ import Linux from "./logos/Linux.astro";
               <li class="flex items-start gap-2">
                 <Check className="text-green-400 h-4 w-5 min-w-5 min-h-5" />
                 <span
-                  >Implementación de colores contrastantes para un tema oscuro
+                  >Implementación de colores contrastantes para un diseño
                   moderno.</span
                 >
               </li>
@@ -140,8 +170,9 @@ import Linux from "./logos/Linux.astro";
             <div>
               <a
                 href="https://hashiramen.vercel.app/"
-                target="_blank" rel="noopener noreferrer"
-                class="border-2 border-blue-400 rounded text-blue-400 font-medium py-1 px-4 hover:bg-blue-400 hover:text-slate-950 inline-flex items-center gap-2"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="border-2 border-blue-400 text-blue-400 font-medium py-1 px-4 transition-colors ease-in delay-150 hover:bg-blue-400 hover:text-slate-950 inline-flex items-center gap-2"
               >
                 <Link className="size-5" />
                 Preview
@@ -150,19 +181,19 @@ import Linux from "./logos/Linux.astro";
           </div>
         </article>
 
-        <article class="flex flex-col md:flex-row gap-8 items-start">
+        <article class="flex flex-col md:flex-row gap-3 md:gap-8 items-start">
           <img
-            class="w-full md:w-1/2 h-auto border-2 border-neutral-600 rounded-lg"
+            class="w-full md:w-1/2 h-auto border-2 border-neutral-600"
             src={imgLocOsLinux.src}
             alt="Vista previa del diseño de la página de Loc-OS Linux"
             loading="lazy"
           />
 
           <div>
-            <h3 class="text-3xl font-medium mb-1 text-blue-300">
+            <h3 class="text-2xl md:text-3xl font-medium mb-2 text-blue-300">
               Loc-OS Linux - Diseño Web
             </h3>
-            <h4 class="text-xl mb-4 text-neutral-200">2021</h4>
+            <h4 class="text-sm mb-4 text-neutral-200">2021</h4>
             <div class="flex gap-4 mb-4">
               <span><Html className="size-5" /> </span>
               <span><Css className="size-5" /></span>
@@ -188,27 +219,36 @@ import Linux from "./logos/Linux.astro";
                 <span>Optimización para dispositivos móviles.</span>
               </li>
             </ul>
-            <div>
+            <div class="flex gap-2">
               <a
                 href="https://adriantaf.github.io/loc-os-linux/"
-                target="_blank" rel="noopener noreferrer"
-                class="border-2 border-blue-400 rounded text-blue-400 font-medium py-1 px-4 hover:bg-blue-400 hover:text-slate-950 inline-flex items-center gap-2"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="border-2 border-blue-400 text-blue-400 font-medium py-1 px-4 transition-colors ease-in delay-150 hover:bg-blue-400 hover:text-slate-950 inline-flex items-center gap-2"
               >
                 <Link className="size-5" />
                 Preview
+              </a>
+              <a
+                href="https://github.com/adriantaf/loc-os-linux"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="border-2 border-gray-300 text-gray-300 font-medium py-1 px-4 transition-colors ease-in delay-150 hover:bg-gray-300 hover:text-slate-950 inline-flex items-center gap-2"
+              >
+                Código
               </a>
             </div>
           </div>
         </article>
       </div>
     </Section>
-    <Section id="habilidades" title="Habilidades">
-      <Brain className="size-8" slot="icon" />
+    <Section id="tecnologias" title="Tecnologías">
+      <Dev className="size-8" slot="icon" />
 
-      <div>
-        <div class="mb-10">
-          <h3 class="text-xl text-neutral-300 font-semibold mb-4">Front-end</h3>
-          <div class="w-full flex flex-wrap gap-10">
+      <div class="flex flex-wrap gap-8 sm:gap-14 sm:flex-row">
+        <div>
+          <h3 class="text-xl text-neutral-300 font-medium mb-2 md:mb-4">Front-end</h3>
+          <div class="w-full flex flex-wrap gap-5">
             <SkillContainer>
               <SkillItem>
                 <JsLogo
@@ -241,9 +281,9 @@ import Linux from "./logos/Linux.astro";
             </SkillContainer>
           </div>
         </div>
-        <div class="mb-10">
-          <h3 class="text-xl text-neutral-300 font-semibold mb-4">Back-end</h3>
-          <div class="w-full flex flex-wrap gap-10">
+        <div>
+          <h3 class="text-xl text-neutral-300 font-medium mb-2 md:mb-4">Back-end</h3>
+          <div class="w-full flex flex-wrap gap-5">
             <SkillContainer>
               <SkillItem>
                 <MySql className="size-8 max-h-full max-w-full aspect-square" />
@@ -254,22 +294,22 @@ import Linux from "./logos/Linux.astro";
               <SkillItem>
                 <Php className="size-8 max-h-full max-w-full aspect-square" />
               </SkillItem>
-              <p class="text-sm text-neutral-200 text-center">
+              <!-- <p class="text-sm text-neutral-200 text-center">
                 POO & CRUD con MySQL
-              </p>
+              </p> -->
             </SkillContainer>
           </div>
         </div>
         <div>
-          <h3 class="text-xl text-neutral-300 font-semibold mb-4">Otros</h3>
-          <div class="w-full flex flex-wrap gap-10">
+          <h3 class="text-xl text-neutral-300 font-medium mb-2 md:mb-4">Otros</h3>
+          <div class="w-full flex flex-wrap gap-5">
             <SkillContainer className="max-w-[50%]">
               <SkillItem>
                 <Cpp className="size-8 max-h-full max-w-full aspect-square" />
               </SkillItem>
-              <p class="text-sm text-neutral-200 text-center">
+              <!-- <p class="text-sm text-neutral-200 text-center">
                 Programación estructurada
-              </p>
+              </p> -->
             </SkillContainer>
 
             <SkillContainer className="max-w-[50%]">
@@ -278,16 +318,16 @@ import Linux from "./logos/Linux.astro";
                   className="size-8 max-h-full max-w-full aspect-square"
                 />
               </SkillItem>
-              <p class="text-sm text-neutral-200 text-center">Desktop</p>
+              <!-- <p class="text-sm text-neutral-200 text-center">Desktop</p> -->
             </SkillContainer>
 
             <SkillContainer className="max-w-[50%]">
               <SkillItem>
                 <Java className="size-8 max-h-full max-w-full aspect-square" />
               </SkillItem>
-              <p class="text-sm text-neutral-200 text-center">
+              <!-- <p class="text-sm text-neutral-200 text-center">
                 POO, Desktop & CRUD con MySQL
-              </p>
+              </p> -->
             </SkillContainer>
 
             <SkillContainer className="max-w-[50%]">
@@ -299,21 +339,34 @@ import Linux from "./logos/Linux.astro";
         </div>
       </div>
     </Section>
+    <Section id="habilidades" title="Habilidades">
+      <Brain className="size-8" slot="icon" />
+      <div>
+        <ul class="space-y-2 list-[square] marker:text-red-500 pl-4">
+          <li><strong>Programación estructurada</strong> con C++</li>
+          <li><strong>Desktop</strong> C#, MySQL & JAVA</li>
+          <li><strong>POO</strong> en Java</li>
+          <li>Uso doméstico y de terminal de sistemas operativos basados en <strong>Linux</strong> [2020 - 2024]</li>
+          <li><strong>Front-end</strong> basado en React y Astro</li>
+          <li><strong>Back-end</strong> con PHP y MySQL (básico por ahora)</li>
+        </ul>
+      </div>
+    </Section>
     <Section id="educacion" title="Educación">
       <Book className="size-8" slot="icon" />
       <div class="space-y-8">
         <div class="border-l-4 border-purple-500 pl-6">
-          <h3 class="text-2xl font-semibold mb-2">
+          <h3 class="text-lg md:text-2xl font-medium mb-2">
             Ingeniería en Sistemas Computacionales
           </h3>
-          <p class="text-neutral-200 text-lg">
+          <p class="text-neutral-200 text-base mb-2 md:text-lg">
             Instituto Tecnológico de Ensenada (ITE)
           </p>
           <p class="text-sm text-neutral-300">Agosto 2023 - En curso</p>
         </div>
         <div class="border-l-4 border-purple-500 pl-6">
-          <h3 class="text-2xl font-semibold mb-2">Técnico en Programación</h3>
-          <p class="text-neutral-200 text-lg">CBTIS 41</p>
+          <h3 class="text-lg md:text-2xl font-medium mb-2">Técnico en Programación</h3>
+          <p class="text-neutral-200 text-base mb-2 md:text-lg">CBTIS 41</p>
           <p class="text-sm text-neutral-300">Agosto 2019 - Julio 2023</p>
         </div>
       </div>
@@ -338,9 +391,9 @@ import Linux from "./logos/Linux.astro";
         </p>
       </div>
     </Section>
-    <footer class="w-full flex justify-center">
+    <footer class="w-full flex justify-center px-5">
       <div class="container py-12 text-right">
-        Desarrollado con Astro.
+        <small>Desarrollado con Astro.</small>
       </div>
     </footer>
   </div>
