--- a/src/components/shared/Diagonal.astro
+++ b/src/components/shared/Diagonal.astro
@@ -6,14 +6,16 @@ interface Props {
 
 const { className, invert } = Astro.props as Props;
 const hasSlotContent = Astro.slots.default;
-
 ---
+
 <div
-  class={`${className} ${hasSlotContent ? "px-1" : "px-2"} ${invert ? "slash" : "diagonal"} inline-flex h-full relative items-center font-mono font-bold`}
+  class={`${className} ${hasSlotContent ? "px-2 sm:px-3" : "px-2"} ${invert ? "slash" : "diagonal"}  inline-flex h-full items-center font-mono font-bold`}
 >
   {
     hasSlotContent && (
-      <span class={`${invert ? "pr-3" : "pl-3"} flex gap-1 items-center`}>
+      <span
+        class={`${invert ? "pl-2 sm:pr-1" : "sm:pl-1 pr-2"} flex gap-1 items-center`}
+      >
         <slot />
       </span>
     )
@@ -21,52 +23,61 @@ const hasSlotContent = Astro.slots.default;
 </div>
 
 <style>
-  .slash::before {
-    content: "";
-    position: absolute;
-    left: calc(var(--height, 0px) / -2);
-    z-index: 10;
-    border-right: calc(var(--height, 0px) / 2) solid
-      var(--bg-color, transparent);
-    border-bottom: calc(var(--height, 0px)) solid transparent;
+  .diagonal {
+    clip-path: polygon(0 0, 100% 0%, calc(100% - 15px) 100%, 0 100%);
   }
+  .slash {
+    clip-path: polygon(0 0, 100% 0%, 100% 100%, 15px 100%);
+  }
+  /* Transición de la diagonal */
+  /* .slash::before,
   .diagonal::after {
     content: "";
     position: absolute;
+  }
+
+  .slash::before {
+    left: calc(var(--height, 0px) / -2);
+    z-index: 10;
+    border-right: calc(var(--height, 0px) / 2) solid var(--bg-color, transparent);
+    border-bottom: calc(var(--height, 0px)) solid transparent;
+  }
+
+  .diagonal::after {
     right: calc(var(--height, 0px) / -2);
     z-index: 10;
     border-left: calc(var(--height, 0px) / 2) solid var(--bg-color, transparent);
     border-bottom: calc(var(--height, 0px)) solid transparent;
-  }
+  } */
 </style>
 
 <script>
-  document.addEventListener("DOMContentLoaded", () => {
-    function updateCssVariables(element: HTMLElement) {
-      const height = element.offsetHeight;
-      const bgColor = window.getComputedStyle(element).backgroundColor;
+  // document.addEventListener("DOMContentLoaded", () => {
+  //   function updateCssVariables(element: HTMLElement) {
+  //     const height = element.offsetHeight;
+  //     const bgColor = window.getComputedStyle(element).backgroundColor;
 
-      element.style.setProperty("--height", `${height}px`);
-      element.style.setProperty("--bg-color", bgColor);
-    }
+  //     element.style.setProperty("--height", `${height}px`);
+  //     element.style.setProperty("--bg-color", bgColor);
+  //   }
 
-    const diagonals = document.querySelectorAll<HTMLElement>(".diagonal");
-    const slashes = document.querySelectorAll<HTMLElement>(".slash");
+  //   const diagonals = document.querySelectorAll<HTMLElement>(".diagonal");
+  //   const slashes = document.querySelectorAll<HTMLElement>(".slash");
 
-    diagonals.forEach((element) => {
-      updateCssVariables(element);
+  //   diagonals.forEach((element) => {
+  //     updateCssVariables(element);
 
-      ["mouseenter", "mouseleave"].forEach((event) => {
-        element.addEventListener(event, () => updateCssVariables(element));
-      });
-    });
-    
-    slashes.forEach((element) => {
-      updateCssVariables(element);
+  //     ["mouseenter", "mouseleave"].forEach((event) => {
+  //       element.addEventListener(event, () => updateCssVariables(element));
+  //     });
+  //   });
 
-      ["mouseenter", "mouseleave"].forEach((event) => {
-        element.addEventListener(event, () => updateCssVariables(element));
-      });
-    });
-  });
+  //   slashes.forEach((element) => {
+  //     updateCssVariables(element);
+
+  //     ["mouseenter", "mouseleave"].forEach((event) => {
+  //       element.addEventListener(event, () => updateCssVariables(element));
+  //     });
+  //   });
+  // });
 </script>
