--- a/src/components/shared/Section.astro
+++ b/src/components/shared/Section.astro
@@ -9,8 +9,8 @@ const { id, title, className } = Astro.props as Props;
 const hasIcon = Astro.slots.has("icon");
 ---
 
-<section id={id} class={`px-5 py-6 mb-16 max-w-[100%] w-[1000px] ${className}`}>
-  <h2 class="text-3xl mb-10 text-neutral-100 font-medium flex items-center">
+<section id={id} class={`px-5 py-6 mb-14 max-w-[100%] w-[1000px] ${className}`}>
+  <h2 class="text-2xl md:text-3xl mb-4 md:mb-7 text-neutral-100 font-medium flex items-center">
     {
       hasIcon && (
         <span class="mr-3">
