--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,10 +19,10 @@ import './styles/Fonts.css';
 			muted
 			autoplay
 			loop
-			class="h-screen z-10 object-cover w-dvw absolute top-0 left-0"
+			class="h-dvh hidden md:block z-10 object-cover w-full absolute top-0 left-0"
 			src={BgVideo}
 		></video>
-		<div class="body-content h-dvh w-dvw z-[100] absolute top-0 left-0">
+		<div class="body-content h-dvh w-full z-[100] absolute top-0 left-0">
 			<slot />
 		</div>
 	</body>
@@ -38,6 +38,9 @@ import './styles/Fonts.css';
 </script>
 
 <style is:global>
+	* {
+		scroll-behavior: smooth;
+	}
 	html,
 	body {
 		height: 100%;
@@ -60,7 +63,7 @@ import './styles/Fonts.css';
 			rgba(17, 18, 29, 0.85) 0%,
 			rgba(2, 6, 23, 0.85) 80%
 		);
-		backdrop-filter: blur(8px);
+		backdrop-filter: blur(12px);
 	}
 
 	*::-webkit-scrollbar {
