Frase cambiada por una de Nikola Tesla

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,7 +33,7 @@ import "./styles/Fonts.css";
 			muted
 			autoplay
 			loop
-			class="h-dvh dark:hidden md:block z-10 object-cover w-full absolute top-0 left-0"
+			class="h-dvh hidden md:block dark:md:hidden z-10 object-cover w-full absolute top-0 left-0"
 			src={BgVideo}></video>
 		<div
 			id="main-container"
