--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -9,7 +9,7 @@ import User from "./icons/User.astro";
 import Check from "./icons/Check.astro";
 import Section from "./shared/Section.astro";
 import imgHashiRamen from "../assets/img/screenshot-hr.png";
-import imgAlbert from "../assets/img/img-albert-einsten.png";
+import imgNikolaTesla from "../assets/img/img-nikola-tesla.webp";
 import imgLocOsLinux from "../assets/img/screenshot-lpl.png";
 import imgCloneSpotify from "../assets/img/screenshot-sp.png";
 import AstroIcon from "./icons/AstroIcon.astro";
@@ -38,9 +38,9 @@ import Linux from "./logos/Linux.astro";
     id="main"
     class="h-full overflow-x-hidden overflow-y-auto flex flex-col items-center"
   >
-    <section id="init" class="h-auto">
+    <section id="init" class="h-auto px-6 flex flex-col justify-center">
       <div
-        class="max-w-[100dvw] w-[700px] px-5 py-20 min-h-full-main h-auto flex flex-col justify-center"
+        class="max-w-[700px] py-20 min-h-full-main h-auto flex flex-col justify-center"
       >
         <h2 class="text-5xl md:text-7xl dark:text-neutral-100 font-medium mb-2">
           <span class="text-orange-950 dark:text-orange-100">A</span>drian <span
@@ -70,16 +70,16 @@ import Linux from "./logos/Linux.astro";
       </div>
 
       <!-- Frase -->
-      <div class="h-auto py-10 pb-14 md:py-0 md:pb-20 px-5 max-w-[100dvw] w-[700px] flex flex-col items-center justify-center md:items-center md:flex-row-reverse gap-6">
+      <div class="h-auto py-10 pb-14 md:py-0 md:pb-20 max-w-[700px] flex flex-col items-center justify-center md:items-center md:flex-row gap-6">
         <blockquote class="dark:text-neutral-100 text-base md:text-lg">
-          <p class="italic">
-            <!-- "El desarrollo progresivo del hombre depende vitalmente de las
-            invenciones. Son el resultado más importante del cerebro creativo". -->
-            "La creatividad es inteligencia divirtiéndose."
+          <p class="italic max-w-[500px]">
+            "El desarrollo progresivo del hombre depende vitalmente de las
+            invenciones. Son el resultado más importante del cerebro creativo".
+            <!-- "La creatividad es inteligencia divirtiéndose." -->
           </p>
-          <small class="block mt-4 text-base text-right text-neutral-800 dark:text-neutral-200">- Albert Einstein.</small>
+          <small class="block mt-4 text-base text-right text-neutral-800 dark:text-neutral-200">- Nikola Tesla.</small>
         </blockquote>
-        <img src={imgAlbert.src} class="max-w-[100%] w-[300px] [mask-image:linear-gradient(#000_80%,transparent)]" alt="Imagen de Albert Einstein">
+        <img src={imgNikolaTesla.src} class="max-w-[100%] w-[300px]" alt="Imagen de Nikola Tesla">
       </div>
     </section>
 
